<resources>
    <string name="app_name">Sign In - Sign Up Samples</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="logged_in_successfully">Logged in successfully</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="sample1_app_name">Tree Coffee</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sample2_app_name">Super Star</string>
    <string name="sample3_app_name">Raine Smiths</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions</string>
    <string name="register">Register</string>
    <string name="confirm_failed">Confirm failed</string>
</resources>
